# pilates-mcp-server

./: README.md  install.ps1  install.sh  main.py  pyproject.toml  server.py
