[project]
name = "pilates-mcp-server"
version = "0.1.0"
description = "Pilates studio information MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.20.0",
    "httpx>=0.25.0",
]

[project.scripts]
pilates-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py", "main.py"]
